# tefs

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  README.md  goals.t
cmake/: FindGLFW3.cmake
include/glad/: glad.h
src/: glad.c  glfw_callbacks.hpp  glfw_funcs.hpp  main.cpp  main.hpp  shader.hpp
src/shaders/: shader.fs  shader.vs
